@@ -70,6 +70,8 @@ Bug fixes:
   (Stéphane Glondu)
 - PR#6669: fix 4.02 regression in toplevel printing of lazy values
   (Leo White, review by Gabriel Scherer)
+- PR#6671: Windows: environment variable 'TZ' affects Unix.gettimeofday
+  (Mickael Delahaye and Damien Doligez)
 - PR#6680: Missing parens when printing polymorphic variant value in warning
 - PR#6690: Uncaught exception (Not_found) with (wrong) wildcard or unification
            type variable in place of a local abstract type
